--- a/templates/manage-layout.tmpl
+++ b/templates/manage-layout.tmpl
@@ -104,6 +104,17 @@
 				</li>
 				<li class="start">
 					<a href="javascript:;">
+					<i class="icon-badge"></i>
+					<span class="title">内容管理</span>
+					<span class="selected"></span>
+					<span class="arrow"></span>
+					</a>
+					<ul class="sub-menu">
+						<li><a href="/manage/pic/index.html"><i class="icon-picture"></i> 首页轮播</a></li>
+					</ul>
+				</li>
+				<li class="start">
+					<a href="javascript:;">
 					<i class="icon-book-open"></i>
 					<span class="title">资讯管理</span>
 					<span class="selected"></span>
@@ -132,7 +143,7 @@
 				</li>
 				<li>
 					<a href="javascript:;">
-					<i class="icon-fire"></i>
+					<i class="icon-direction"></i>
 					<span class="title">广告管理</span>
 					<span class="arrow "></span>
 					</a>
