--- a/templates/news-index.tmpl
+++ b/templates/news-index.tmpl
@@ -19,7 +19,7 @@
 					<li class='hoverable clickable'><a href='#'>各界声音</a></li>
 					<li class='hoverable clickable'><a href='#'>成交数据</a></li>
 					<li class='hoverable clickable'><a href='#'>独家探盘</a></li>
-					<li class='hoverable clickable'><a href='#'>慧眼看楼</a></li>
+					<li class='hoverable clickable'><a href='#'><i class='icon-eye'></i> 慧眼看楼</a></li>
 				</ul>
 			</div>
 		</div>
@@ -35,27 +35,31 @@
 							<h1>要闻推荐</h1>
 						</div>
 						<div class='bd f13'>
+							<h2 class='l3 bold'><nobr>北京佳兆业广场施工缓慢 能否如期入市存疑</nobr></h2>
+							<blockquote class='f12 quote'>2014年嘉兴共出让105宗地块，土地出让面积约278.96万方，同比去年下同比去年下同比去年下滑...</blockquote>
 							<ul>
-								<li>
-									<div>
-										<h2><b>北京佳兆业广场施工缓慢 能否如期入市存疑</b></h2>
-									</div>
-								</li>
-								<li>
-									<a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a>
-								</li>
+								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
+								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
+								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
+								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
+								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
+								<li class='l2'><i class='icon-dot'></i> <a href='#'>绿地地产销售冲击2800亿 上半年有望完成上市 </a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div class='right-570'>
-					B
+					<div class='block block-news-pics block-boundless'>
+						<div class='bd'>
+							<img src='/images/news/sample.jpg' width=570 height=290 />
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	
-	{{template "ft"}}
+	{{template "ft" .}}
 	
 </body>
 </html>
